# vqLLM

./: .gitignore  CMakeLists.txt  CORE_REBOOT.md  CRITICAL_NEXT_STEPS.md  CodecLLMDiscussion.txt  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  PROJECT_COMPLETE.md  README.md  SETUP.md  WEEK2_SUMMARY.md  WEEK3_SUMMARY.md  WEEK4_SUMMARY.md  WEEK5_SUMMARY.md  WEEK6_COMPLETE.md  codecllmkey.txt  rebuild_and_test.sh  requirements.txt  restore_working_rans.sh  setup.sh  setup_fused_kernel_project.py  test_rans_fp16_core.py  test_rans_fp16_multilayer.py  test_rans_fp16_optimized.py  test_rans_inference.py  test_rans_llm_core.py  test_rans_minimal.py  test_rans_parallel_streams.py  test_rans_simple.py  test_rans_simple_core.py  test_rans_working.py
core/: .gitignore  ALL_LAYERS_TEST_ANALYSIS.md  ANSWER_TO_YOUR_QUESTION.md  ARCHITECTURE_EVOLUTION.md  BATCHED_CPU_SUCCESS.md  BATCHED_IMPLEMENTATION_COMPLETE.md  BREAKTHROUGH_ANALYSIS.md  BUILD_ASSESSMENT.md  BUILD_FIX.md  CACHING_EXPLANATION.md  CHECK_BUILD_ERROR.sh  CHECK_ZSTD.sh  CLEAN_INSTALL_NVCOMP3.sh  CMakeLists.txt  COMPRESSION_BLOCKERS.md  COMPRESS_ALL_LAYERS_ANALYSIS.md  CURRENT_STATUS.md  DIAGNOSIS_STEPS.md  DOWNGRADE_TO_NVCOMP3.sh  FIXES_APPLIED.md  FIX_NVCOMP_PATH.sh  FULL_SETUP_AND_TEST.sh  GPU_DIRECT_INSTRUCTIONS.md  GPU_DIRECT_OPTIMIZATION.md  GPU_INFERENCE_GUIDE.md  GPU_OPTIMIZATION_ROADMAP.md  IMPLEMENTATION.md  INFERENCE_SPEED_ANALYSIS.md  INSTALL_NVCOMP.md  INSTALL_NVCOMP3.sh  INSTALL_NVCOMP3_BINARY.sh  INSTALL_NVCOMP_AND_BUILD.sh  LOWMEM_FIXES_OCT19.md  LOWMEM_INFERENCE_READY.md  MILESTONE_CODEC_COMPLETE.md  NVCOMP3_FIXES.md  NVCOMP_3_VS_5_API.md  NVCOMP_5_ISSUE.md  NVCOMP_API_DIFFERENCES.md  NVCOMP_API_NOTES.md  (+136 more)
core/archive/: RUN_TESTS.txt  build_and_test.sh  c_api.cpp  decoder_batched.cpp  decoder_batched.h  decoder_batched_cpu.cpp  decoder_batched_cpu.h  decoder_gpu.cu  decoder_host.cpp  decoder_host.h  demo_lowmem_inference.py  diagnose_output_encoding.py  encoder.cpp  encoder.h  encoder_batched.cpp  encoder_batched.h  encoder_simple.cpp  format.h  format_batched.h  rans.h  testdump.txt
core/archive/cuda/: kernels.cuh  rans_decode.cu  transform.cu
core_rans/: CMakeLists.txt  encoder_safe.cpp
cpp/include/wcodec/: bitplane.h  container.h  container_reader.h  container_writer.h  decoder.h  encoder.h  encoder_gpu.h  gpu_decode_direct.h  gpu_decoder.h  predictor.h  rans.h  transform.h  types.h
cpp/src/: bitplane.cpp  c_api.cpp  container.cpp  container_reader.cpp  container_writer.cpp  decoder.cpp  encoder.cpp  encoder_gpu.cpp  gpu_decoder.cpp  gpu_decoder_full.cpp  predictor.cpp  rans.cpp  transform.cpp
cuda/: kernels.cuh  predictor_reconstruct.cu  rans_decode_full.cu
docs/: DEVELOPMENT_HISTORY.md  FULL_GPU_INTEGRATION.md  FUSED_KERNEL_ANALYSIS.md  FUSED_KERNEL_NEW_PROJECT_SETUP.md  GPU_OPTIMIZATION_FINAL.md  WEEK4_QUICKSTART.md  codec_spec_v0.md  integration_guide.md  week1_summary.md  week2_plan.md  week3_plan.md  week4_plan.md  week5_plan.md  week6_plan.md
fused_kernel_project/: README.md  SETUP.md
fused_kernel_project/docs/: FUSED_KERNEL_IMPLEMENTATION_GUIDE.md  FUSED_KERNEL_TECHNICAL_SPEC.md  SPEED_OPTIMIZATION_GUIDE.md
fused_kernel_project/src/rans/: encoder_simple.cpp
python/: setup.py
python/wcodec/: __init__.py  bindings.py  decoder.py  decoder_api.py  encoder.py  encoder_api.py  torch_loader.py
scripts/: baseline_harness.py  build_cuda.sh  check_build.sh  decode_checkpoint.py  encode_checkpoint.py  run_all_tests.sh  verify_checkpoint.py
tests/: benchmark_decode.py  test_compression_roundtrip.py  test_end_to_end.py  test_gpu_decode_working.py  test_gpu_decoder.py  test_predictor.py  test_roundtrip.py  test_week2_week3.py
